<resources>
    <string name="app_name">Github User</string>
    <string name="search_user">Search user</string>
    <string name="username">Username</string>
    <string name="Username">username</string>
    <string name="bio">Bio</string>
    <string name="name">Name</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas vestibulum neque sapien, quis feugiat quam mollis eget. Nunc facilisis ultrices leo quis commodo. Aenean pellentesque ac arcu id ultricies. Nam sagittis vehicula blandit. Praesent in augue consectetur nulla lobortis tincidunt at at dui. Nulla a finibus massa, vel rhoncus sem. Vestibulum mi mauris, dapibus in facilisis sit amet, pretium a lacus. Quisque dictum vehicula ipsum, vitae pretium leo maximus nec. Sed luctus aliquam massa.</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="_0">0</string>
    <string name="repositories">Repositories</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error">Error</string>
    <string name="no_followers">No followers</string>
    <string name="no_following">No following</string>
    <string name="settings">Settings</string>
    <string name="favorite">Favorite</string>
    <string name="there_are_no_favorite_users">There are no favorite users</string>
    <string name="favorite_button">favorite button</string>
    <string name="dark_mode">Dark mode</string>
</resources>